--- a/book_listings.css
+++ b/book_listings.css
@@ -75,3 +75,37 @@
 .pages li:hover {
 	border-bottom: 0.3rem solid black;
 }
+@media screen and (max-width: 1621px) {
+	.listing_details {
+		grid-template-columns: 1fr;
+	}
+	.availability {
+		padding-top: 0;
+		text-align: center;
+	}
+	.message {
+		text-align: center;
+		padding-right: 0;
+	}
+	main {
+		justify-content: center;
+	}
+
+	.checkout {
+		grid-template-rows: 1fr 1fr;
+	}
+	.pages {
+		float: left;
+		width: 50%;
+		margin-left: 40%;
+	}
+}
+@media screen and (max-width: 1175px) {
+	.vertical_nav,
+	.search_catalog {
+		display: none;
+	}
+	.message {
+		margin-bottom: 1rem;
+	}
+}
