--- a/index.css
+++ b/index.css
@@ -17,3 +17,19 @@
 .welcome_center p {
 	width: 90%;
 }
+@media screen and (max-width: 1400px) {
+	main {
+		justify-content: center;
+		align-items: center;
+	}
+
+	.welcome_center {
+		grid-template-columns: 1fr;
+	}
+}
+@media screen and (max-width: 932px) {
+	.vertical_nav,
+	.search_catalog {
+		display: none;
+	}
+}
