--- a/profile.css
+++ b/profile.css
@@ -23,6 +23,7 @@
 .update_image {
 	text-align: center;
 	text-shadow: 0.3rem 0.3rem 0.6rem rgba(0, 0, 0, 0.5);
+	max-width: 100%;
 }
 .profile_details {
 	margin-top: 5rem;
@@ -87,4 +88,20 @@
 }
 .favorites_listings img {
 	display: block;
+	max-width: 100%;
+}
+@media screen and (max-width: 1400px) {
+	.my_profile {
+		grid-template-columns: 1fr;
+	}
+}
+@media screen and (max-width: 932px) {
+	.vertical_nav,
+	.search_catalog {
+		display: none;
+	}
+	main {
+		justify-content: center;
+		align-items: center;
+	}
 }
