--- a/index.css
+++ b/index.css
@@ -21,15 +21,16 @@
 	main {
 		justify-content: center;
 		align-items: center;
+		text-align: center;
 	}
-
 	.welcome_center {
 		grid-template-columns: 1fr;
 	}
-}
-@media screen and (max-width: 932px) {
 	.vertical_nav,
 	.search_catalog {
 		display: none;
+	}
+	.welcome_center h2 {
+		width: 100%;
 	}
 }
